# usb-playground

./: .gitignore  README.md
.github/workflows/: host.yml  nrfbuild.yml  rust.yml
firmware/: Cargo.toml
firmware/.cargo/: config.toml
hello-dioxus/: Cargo.toml
hello-dioxus/src/: main.rs
host/: Cargo.toml
tests/: integration.rs
