[package]
name = "sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = "1.0.1"
serialport = "4.2.0"
dioxus = { version = "0.2.4", features = ["desktop"] }
env_logger = "0.9.0"

[dependencies.serde]
default-features = false
features = ["derive"]
version = "1.0.127"
